add popup and schedule activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/go_schedule_button"
         app:layout_constraintVertical_bias="0.53"
-        tools:listitem="@layout/list_item" />
+        tools:listitem="@layout/course_item" />
 
     <Button
         android:id="@+id/go_schedule_button"
