--- a/app/src/main/res/layout/course_detail_popup_layout.xml
+++ b/app/src/main/res/layout/course_detail_popup_layout.xml
@@ -14,6 +14,10 @@
         app:cardBackgroundColor="#f2f2f2"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -323,6 +327,7 @@
 
 
         </LinearLayout>
+        </ScrollView>
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
